non server shoots bug

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -79,7 +79,6 @@
     <Compile Include="Assets\Scripts\Puzzle\FloorSwitch.cs" />
     <Compile Include="Assets\Scripts\Tools\SceneNav.cs" />
     <Compile Include="Assets\Scripts\UI\BlackPanel.cs" />
-    <Compile Include="Assets\Scripts\Tank\Gun.cs" />
     <Compile Include="Assets\Scripts\NetworkActions\NetworkActionBytes.cs" />
     <Compile Include="Assets\Scripts\Authentication\AuthenticatorTest.cs" />
     <Compile Include="Assets\Scripts\Puzzle\Hazard.cs" />
@@ -531,6 +530,18 @@
     </Reference>
     <Reference Include="Mono.Cecil">
       <HintPath>Library\PackageCache\com.unity.nuget.mono-cecil@1.11.4\Mono.Cecil.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Unity.Android.Types">
+      <HintPath>D:\Unity\Unity 2022.3.34f1\Editor\Data\PlaybackEngines\AndroidPlayer\Unity.Android.Types.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Unity.Android.Gradle">
+      <HintPath>D:\Unity\Unity 2022.3.34f1\Editor\Data\PlaybackEngines\AndroidPlayer\Unity.Android.Gradle.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Unity.Android.GradleProject">
+      <HintPath>D:\Unity\Unity 2022.3.34f1\Editor\Data\PlaybackEngines\AndroidPlayer\Unity.Android.GradleProject.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="netstandard">
