--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -80,15 +80,16 @@
     <Compile Include="Assets\Scripts\Tools\TimeToolMono.cs" />
     <Compile Include="Assets\Scripts\Menu\LobbyMatchSelectPanel.cs" />
     <Compile Include="Assets\Scripts\NetworkActions\NetworkActionFloat.cs" />
+    <Compile Include="Assets\Scripts\Tile.cs" />
     <Compile Include="Assets\Scripts\Simple\AutoChangeOwner.cs" />
     <Compile Include="Assets\Scripts\Puzzle\ArrowSpawn.cs" />
+    <Compile Include="Assets\Scripts\ChessPiece.cs" />
     <Compile Include="Assets\Scripts\ServerLauncher.cs" />
     <Compile Include="Assets\Scripts\Puzzle\PuzzleGame.cs" />
     <Compile Include="Assets\Scripts\ServerMatchmaker.cs" />
     <Compile Include="Assets\Scripts\SNetworkVariable.cs" />
     <Compile Include="Assets\Scripts\Menu\LobbyPanel.cs" />
     <Compile Include="Assets\Scripts\Menu\LobbyMatchmakingPanel.cs" />
-    <Compile Include="Assets\Scripts\HighlightPiece.cs" />
     <Compile Include="Assets\Scripts\Simple\PlayerCube.cs" />
     <Compile Include="Assets\Scripts\Puzzle\Lever.cs" />
     <Compile Include="Assets\Scripts\Authentication\AuthenticatorUserApi.cs" />
@@ -108,6 +109,7 @@
     <Compile Include="Assets\Scripts\Tank\CameraTank.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\UI\OptionSelector.cs" />
+    <Compile Include="Assets\Scripts\GameLogic.cs" />
     <Compile Include="Assets\Scripts\ServerLobby.cs" />
     <Compile Include="Assets\Scripts\UI\GameOverPanel.cs" />
     <Compile Include="Assets\Scripts\NetworkData.cs" />
@@ -159,7 +161,6 @@
     <Compile Include="Assets\Scripts\NetworkActions\NetworkActionInt.cs" />
     <Compile Include="Assets\Scripts\ServerLobbyConfig.cs" />
     <Compile Include="Assets\Scripts\Menu\LobbyConnectPanel.cs" />
-    <None Include="Assets\Shader\NewSurfaceShader.shader" />
     <Reference Include="UnityEngine">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2022.3.49f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
     </Reference>
@@ -410,22 +411,22 @@
       <HintPath>C:\Program Files\Unity\Hub\Editor\2022.3.49f1\Editor\Data\Managed\UnityEngine\UnityEditor.UnityConnectModule.dll</HintPath>
     </Reference>
     <Reference Include="websocket-sharp">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\PackageCache\com.unity.services.wire@1.2.6\Plugins\websocket-sharp.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\PackageCache\com.unity.services.wire@1.2.6\Plugins\websocket-sharp.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Collections.LowLevel.ILSupport">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\PackageCache\com.unity.collections@1.2.4\Unity.Collections.LowLevel.ILSupport\Unity.Collections.LowLevel.ILSupport.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\PackageCache\com.unity.collections@1.2.4\Unity.Collections.LowLevel.ILSupport\Unity.Collections.LowLevel.ILSupport.dll</HintPath>
     </Reference>
     <Reference Include="ReportGeneratorMerged">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\PackageCache\com.unity.testtools.codecoverage@1.2.6\lib\ReportGenerator\ReportGeneratorMerged.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\PackageCache\com.unity.testtools.codecoverage@1.2.6\lib\ReportGenerator\ReportGeneratorMerged.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.Antlr3.Runtime">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\PackageCache\com.unity.visualscripting@1.9.4\Runtime\VisualScripting.Flow\Dependencies\NCalc\Unity.VisualScripting.Antlr3.Runtime.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\PackageCache\com.unity.visualscripting@1.9.4\Runtime\VisualScripting.Flow\Dependencies\NCalc\Unity.VisualScripting.Antlr3.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\PackageCache\com.unity.nuget.newtonsoft-json@3.2.1\Runtime\Newtonsoft.Json.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\PackageCache\com.unity.nuget.newtonsoft-json@3.2.1\Runtime\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Mono.Cecil">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\PackageCache\com.unity.nuget.mono-cecil@1.11.4\Mono.Cecil.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\PackageCache\com.unity.nuget.mono-cecil@1.11.4\Mono.Cecil.dll</HintPath>
     </Reference>
     <Reference Include="netstandard">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2022.3.49f1\Editor\Data\NetStandard\ref\2.1.0\netstandard.dll</HintPath>
@@ -794,139 +795,139 @@
       <HintPath>C:\Program Files\Unity\Hub\Editor\2022.3.49f1\Editor\Data\NetStandard\compat\2.1.0\shims\netfx\System.Xml.Serialization.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Burst.Editor">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.Burst.Editor.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.Burst.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Services.Core">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.Services.Core.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.Services.Core.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Networking.Transport">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.Networking.Transport.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.Networking.Transport.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Rider.Editor">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.Rider.Editor.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.Rider.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.Flow">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.VisualScripting.Flow.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.VisualScripting.Flow.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Netcode.Components">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.Netcode.Components.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.Netcode.Components.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Mathematics.Editor">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.Mathematics.Editor.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.Mathematics.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TestTools.CodeCoverage.Editor.OpenCover.Mono.Reflection">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.TestTools.CodeCoverage.Editor.OpenCover.Mono.Reflection.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.TestTools.CodeCoverage.Editor.OpenCover.Mono.Reflection.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Netcode.Editor">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.Netcode.Editor.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.Netcode.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Services.Core.Environments">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.Services.Core.Environments.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.Services.Core.Environments.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Services.Relay">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.Services.Relay.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.Services.Relay.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Performance.Profile-Analyzer.Editor">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.Performance.Profile-Analyzer.Editor.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.Performance.Profile-Analyzer.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TestTools.CodeCoverage.Editor">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.TestTools.CodeCoverage.Editor.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.TestTools.CodeCoverage.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Collections">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.Collections.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.Collections.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Netcode.Runtime">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.Netcode.Runtime.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.Netcode.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Netcode.Editor.PackageChecker">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.Netcode.Editor.PackageChecker.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.Netcode.Editor.PackageChecker.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.TextMeshPro.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Services.Core.Analytics">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.Services.Core.Analytics.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.Services.Core.Analytics.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VSCode.Editor">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.VSCode.Editor.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.VSCode.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Sysroot.Linux_x86_64">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.Sysroot.Linux_x86_64.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.Sysroot.Linux_x86_64.dll</HintPath>
     </Reference>
     <Reference Include="Unity.EditorCoroutines.Editor">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.EditorCoroutines.Editor.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.EditorCoroutines.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.PlasticSCM.Editor">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.PlasticSCM.Editor.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.PlasticSCM.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Burst">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.Burst.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.Burst.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Services.Authentication.Editor.Shared">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.Services.Authentication.Editor.Shared.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.Services.Authentication.Editor.Shared.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline.Editor">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.Timeline.Editor.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.Timeline.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.Shared.Editor">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.VisualScripting.Shared.Editor.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.VisualScripting.Shared.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualStudio.Editor">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.VisualStudio.Editor.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.VisualStudio.Editor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.UI">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\UnityEditor.UI.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\UnityEditor.UI.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.Core">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.VisualScripting.Core.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.VisualScripting.Core.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.Core.Editor">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.VisualScripting.Core.Editor.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.VisualScripting.Core.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Services.QoS">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.Services.QoS.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.Services.QoS.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.UI">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\UnityEngine.UI.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\UnityEngine.UI.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.Flow.Editor">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.VisualScripting.Flow.Editor.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.VisualScripting.Flow.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.Timeline.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.Timeline.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.SettingsProvider.Editor">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.VisualScripting.SettingsProvider.Editor.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.VisualScripting.SettingsProvider.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.SysrootPackage.Editor">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.SysrootPackage.Editor.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.SysrootPackage.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TestTools.CodeCoverage.Editor.OpenCover.Model">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.TestTools.CodeCoverage.Editor.OpenCover.Model.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.TestTools.CodeCoverage.Editor.OpenCover.Model.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Services.Authentication">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.Services.Authentication.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.Services.Authentication.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.State.Editor">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.VisualScripting.State.Editor.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.VisualScripting.State.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Services.Lobbies">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.Services.Lobbies.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.Services.Lobbies.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Mathematics">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.Mathematics.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.Mathematics.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Services.Authentication.PlayerAccounts">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.Services.Authentication.PlayerAccounts.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.Services.Authentication.PlayerAccounts.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Networking.Editor">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.Networking.Editor.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.Networking.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro.Editor">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.TextMeshPro.Editor.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.State">
-      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\Library\ScriptAssemblies\Unity.VisualScripting.State.dll</HintPath>
+      <HintPath>C:\Users\erfan\OneDrive\Desktop\SChess\SChess\Library\ScriptAssemblies\Unity.VisualScripting.State.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
